# url-shortener

./: .env.example  .env.local  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  schemas.py  services.py
app/static/: index.html
tests/: conftest.py  test_api.py  test_services.py
