[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener with click analytics"
authors = ["Victor Patrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.30"
redis = "^5.2"
pydantic-settings = "^2.7"
slowapi = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
